[gd_scene load_steps=3 format=3 uid="uid://n0lobms04k46"]

[ext_resource type="Script" path="res://Timeline.gd" id="1_nk2q8"]

[sub_resource type="LabelSettings" id="LabelSettings_mfck5"]
font_size = 26

[node name="Timeline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nk2q8")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="CurrentTime" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2

[node name="ActualTime" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Test"
label_settings = SubResource("LabelSettings_mfck5")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
